# openclaw-mesh

./: .gitignore  Build.md  Cargo.toml  DHT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Transfer.md  demo.js  mesh.sh  package.json  start.sh
docs/: README.md
examples/: sample-capsule.json
src/: cli.js  config.rs  index.js  ledger-store.js  main.rs  memory-store.js  node.js  p2p.rs  rating-store.js  store.rs  task-bazaar.js  task-worker.js  task_bazaar.rs  task_worker.rs  util.rs  wallet.js  web.rs
test/: run.js
web/: server.js
