[package]
name = "openclaw-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sled = "0.34"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
hex = "0.4"
